--- a/mobile/package.json
+++ b/mobile/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.2",
     "@native-base/expo-template-typescript": "^1.3.1",
+    "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/native": "^6.0.13",
     "@types/react": "~18.0.0",
     "@types/react-native": "~0.69.1",
     "expo": "~46.0.16",
@@ -25,6 +27,7 @@
     "phosphor-react-native": "^1.1.2",
     "react-native": "0.69.6",
     "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
     "react-native-svg-transformer": "^1.0.0",
     "typescript": "^4.6.3"
